--- a/.github/workflows/publish-article.yml
+++ b/.github/workflows/publish-article.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
+        with:
+          enablement: true
 
       - name: Build HTML from Markdown
         run: |
